package com.article_feature.ui.screens.article_list.utils

enum class SortingOption(val sortingName:String){
    RECENT("Recent"),
    POPULAR("Popular"),
    NOTHING("Nothing")
}


object TestTag{

    const val ARTICLE_LIST="article_list"
    const val ARTICLE_SCREEN_PROGRESS_BAR="progress_bar"
    const val ARTICLE_SCREEN_ERROR_TEST_TAG="error_test_tag"

    const val ARTICLE_SCREEN_MORE_VERT="article_screen_more_vert"
}